--- a/src/client/components/homepage/_homepage.scss
+++ b/src/client/components/homepage/_homepage.scss
@@ -57,7 +57,7 @@
 
 		&--dark-mode {
 			@extend .home-page__main-title;
-			color: $white-215-dark-mode;
+			color: $white-230-dark-mode;
 		}
 	}
 }
