--- a/src/client/components/modal/_modal.scss
+++ b/src/client/components/modal/_modal.scss
@@ -13,6 +13,7 @@
 	justify-content: center;
 	align-items: center;
 	background-color: $dark-grey;
+	color: $white;
 
 	&__image-container { // <figure>
 		margin: {
@@ -29,7 +30,7 @@
 
 	&__caption { // <figcaption>
 		font-size: 0.75rem;
-		color: $white;
+		//color: $white;
 		font-style: italic;
 		text-align: right;
 		padding: {
@@ -60,6 +61,7 @@
 		align-items: center;
 		transition-property: background-color;
 		transition-duration: 0.5s;
+		-webkit-tap-highlight-color: transparent;
 
 		&:hover {
 			background-color: $black;
@@ -67,6 +69,10 @@
 
 		.material-icons {
 			font-size: 2rem;
+
+			&.dark-mode {
+				color: $white-215-dark-mode;
+			}
 		}
 	}
 }
