--- a/src/client/css/_global-styles.scss
+++ b/src/client/css/_global-styles.scss
@@ -8,7 +8,7 @@ body {
 
 .level-2-title {
     font-size: 2rem;
-    letter-spacing: 0.625rem;
+    letter-spacing: 0.313rem;
     color: $white;
     margin: {
         top: 0;
@@ -17,12 +17,12 @@ body {
         left: 0;
     }
     @media #{$mq-600-up} {
-        font-size: 2.5rem;
+        font-size: 3rem;
     }
 
     &--dark-mode {
         @extend .level-2-title;
-        color: $white-215-dark-mode;
+        color: $white-230-dark-mode;
     }
 }
 
